--- a/.github/workflows/youth_DV1.yml
+++ b/.github/workflows/youth_DV1.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: youth_read1
+name: YIUTH_READ1
 
 on:
   workflow_dispatch:
@@ -22,7 +22,7 @@ jobs:
       - name: npm install
         run: |
           npm install
-      - name: '运行 【中青看点自动阅读】'
+      - name: '运行 【中青看点自动阅读1】'
         run: |
           node Task/Youth_Read.js
         env:
